# check-python-package

./: Dockerfile  Makefile  README.md  action.yaml  build_command.py  main.sh  pyproject.toml
.github/workflows/: update-actions.yaml
package_checker/: __init__.py  __main__.py  _api.py  api.py  check_and_update_version.py  utils.py
package_checker/tasks/: black.py  isort.py  version_check.py
scripts/: check_version.py  generate_actions.py  next_version.py
tests/: __init__.py  test_github_model.py  test_tasks.py
