[build-system]
requires = ["setuptools", "wheel"]

[project]
authors = [{name = "Mahdi Lamb", email = "mahdilamb@gmail.com"}]
dependencies = ["loguru", "pyyaml", "pydantic"]
description = "Quis custodiet ipsos custodes"
dynamic = ["version"]
name = "package-checker"
[project.optional-dependencies]
test = [
  "black",
  "isort",
  "mypy",
  "bandit",
  "pytest",
  "pytest-cov",
  "docformatter",
  "pydocstyle",
]
[tool.setuptools.dynamic]
version = {attr = "package_checker.__version__"}

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.docformatter]
black = true
recursive = true

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
  "test_*.py",
]
python_functions = ["*_test"]
testpaths = [
  "tests",
]
